# cpp-tetris-clone

./: CMakeLists.txt  README.md
src/blocks/: Block.cpp  Block.h  Blocks.cpp  Blocks.h  blocks.cpp
src/colors/: colors.cpp  colors.h
src/game/: Game.cpp  Game.h  Score.cpp  Score.h  game.cpp  game.h  score.cpp  score.h
src/grid/: Coords.cpp  Coords.h  Grid.cpp  Grid.h
src/gui/: TetrisGui.cpp  TetrisGui.h  arrow.cpp  arrow.h  gradient.cpp  rounded_rectangle.cpp  rounded_rectangle.h
src/gui/gui_components/: Arrow.cpp  Arrow.h  GradientCreator.cpp  GradientCreator.h  RoundedRectangleDrawer.cpp  RoundedRectangleDrawer.h
src/main/: main.cpp
src/media/: AudioPlayer.cpp  AudioPlayer.h  FontLoader.cpp  FontLoader.h
src/process/: Process.cpp  Process.h  process.cpp  process.h
src/utils/: ColorCreator.cpp  ColorCreator.h  Coords.cpp  Coords.h  colors.cpp  colors.h  exceptions.cpp  exceptions.h
tests/: CMakeLists.txt  test_blocks.cpp  test_game.cpp  test_gui.cpp  test_tetris.cpp  test_tetris_gui.cpp
